##Text encoding: utf-8

2014-04-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/equation.cc: fix equation size.
	* libs/gcp/document.cc: propagate theme change to descendants.
	* libs/gcp/reaction.cc: enhance construction.
	* libs/gcp/view.cc: add an font description for default text.
	* libs/gcp/view.h: ditto.
	* libs/gcu/object.cc: add ParentChanged() method.
	* libs/gcu/object.h: ditto.
	* plugins/paint/text/equation.cc: implement perisitence of style.
	* plugins/paint/text/equation.h: ditto.
	* plugins/paint/text/mathtool.cc: set font description after adding the new
	equation to the document.

2014-04-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/equation.cc: fixed rendering.
	* plugins/paint/text/equation.cc: set an appropriate anchor.

2014-04-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/text/eq-props.ui: new equation properties dialog.

2014-04-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: request Lasem.
	* libs/gccv/Makefile.am: new equation item.
	* libs/gccv/canvas.cc: support default font.
	* libs/gccv/canvas.h: ditto.
	* libs/gccv/equation.cc: new equation item.
	* libs/gccv/equation.h: ditto.
	* libs/gccv/line-item.h: typo.
	* libs/gcp/reaction-arrow.cc: accept equations as property.
	* libs/gcp/text.cc: set default ouline color to transparent.
	* plugins/paint/text/Makefile.am: new equation support.
	* plugins/paint/text/equation.cc: ditto.
	* plugins/paint/text/equation.h: ditto.
	* plugins/paint/text/mathtool.cc: ditto.
	* plugins/paint/text/mathtool.h: ditto.
	* plugins/paint/text/plugin.cc: ditto.

2014-04-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/item.cc: fix initialization issues.
	* libs/gccv/leaf.cc: ditto.
	* libs/gccv/polygon.cc: ditto.
	* libs/gccv/squiggle.cc: ditto.

2014-04-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/Makefile.am: new classes.
	* libs/gccv/arc.cc: new Arc class.
	* libs/gccv/arc.h: ditto.